skills screen overlap issue fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,8 +68,8 @@ body {
   letter-spacing: 0.02rem;
   font-size: var(--fs-400);
   color: var(--clr-white);
-  /* background-color: var(--clr-dark); */
-  background: url("./rainbow-vortex.svg") no-repeat;
+  background-color: var(--clr-dark);
+  /* background: url("/images/rainbow-vortex.svg") no-repeat; */
   /* background: url("./sun-tornado.svg") no-repeat; */
   background-size: cover;
   font-weight: 400;
